// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginInfo should render properly 1`] = `
<DocumentFragment>
  <div>
    <p
      class="font-bold"
    >
      About the plugin
    </p>
    <p
      class="mt-3 text-theme-secondary-600"
      data-testid="plugin-info__about"
    >
      Testing About text content
    </p>
  </div>
  <div
    class="mt-8"
  >
    <p
      class="font-bold"
    >
      Permissions
    </p>
    <p
      class="mt-3 text-theme-secondary-600"
      data-testid="plugin-info__permissions"
    >
      Embedded Webpages, API Requests, Access to Profiles
    </p>
  </div>
  <div
    class="relative mt-8"
  >
    <p
      class="font-bold"
    >
      Screenshots
    </p>
    <div
      class="flex absolute top-0 right-0 pr-4 space-x-3 screenshots-pagination swiper-pagination-clickable swiper-pagination-bullets"
      data-testid="plugin-info__screenshots--pagination"
    />
    <div
      class="mt-4"
    >
      <div
        class="relative"
      >
        <div
          class="overflow-hidden px-5 -mx-5 -mb-8 list-none slide-container swiper-container-initialized swiper-container-horizontal"
          style="height: 232px;"
        >
          <div
            class="h-full swiper-wrapper important:z-0 "
            style="width: auto; transform: translate3d(NaNpx, 0px, 0px); transition-duration: 0ms;"
          >
            <div
              class="swiper-slide"
              style="height: 200px; margin-top: 0px;"
            >
              <img
                alt="Screenshot"
                class="object-contain overflow-hidden w-full max-h-44 rounded-lg bg-theme-secondary-200"
                data-testid="plugin-info__screenshot"
                src="https://ark.io/screenshot.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-8"
  >
    <div
      class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
    >
      <div
        class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
      >
        <div
          class="sc-bdfBwQ hteSKx"
          height="1.25em"
          width="1.25em"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col"
      >
        <p
          class="font-semibold dark:text-theme-secondary-500"
          data-testid="Alert__title"
        >
          Disclaimer
        </p>
        <p
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The availability of this plugin in the ARK Desktop Wallet does not mean that either ARK.io or ARK SCIC is directly involved in the development or affiliated with the developer providing this plugin. By installing it on your wallet, you assume every responsibility
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginInfo should render with minimum version 1`] = `
<div>
  <div
    class="mt-8"
  >
    <p
      class="font-bold"
    >
      Requirements
    </p>
    <p
      class="mt-3 text-theme-secondary-600"
      data-testid="plugin-info__mininum-version"
    >
      <span>
        Desktop Wallet Version
         v
        3.0.1
        +
      </span>
    </p>
  </div>
  <div
    class="mt-8"
  >
    <div
      class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
    >
      <div
        class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
      >
        <div
          class="sc-bdfBwQ hteSKx"
          height="1.25em"
          width="1.25em"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col"
      >
        <p
          class="font-semibold dark:text-theme-secondary-500"
          data-testid="Alert__title"
        >
          Disclaimer
        </p>
        <p
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The availability of this plugin in the ARK Desktop Wallet does not mean that either ARK.io or ARK SCIC is directly involved in the development or affiliated with the developer providing this plugin. By installing it on your wallet, you assume every responsibility
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`PluginInfo should render without permissions 1`] = `
<DocumentFragment>
  <div>
    <p
      class="font-bold"
    >
      About the plugin
    </p>
    <p
      class="mt-3 text-theme-secondary-600"
      data-testid="plugin-info__about"
    >
      Testing About text content
    </p>
  </div>
  <div
    class="mt-8"
  >
    <div
      class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
    >
      <div
        class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
      >
        <div
          class="sc-bdfBwQ hteSKx"
          height="1.25em"
          width="1.25em"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col"
      >
        <p
          class="font-semibold dark:text-theme-secondary-500"
          data-testid="Alert__title"
        >
          Disclaimer
        </p>
        <p
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The availability of this plugin in the ARK Desktop Wallet does not mean that either ARK.io or ARK SCIC is directly involved in the development or affiliated with the developer providing this plugin. By installing it on your wallet, you assume every responsibility
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
